Fix KA links on mobile, hide programming links

--- a/www/less/main/base.less
+++ b/www/less/main/base.less
@@ -134,7 +134,7 @@ a {
 
         .text-ka-default {
 		.darken-hover(@ka-default4);
-		color: @ka-default4;
+		color: @ka-green;
         }
 }
 
